# account-utils

./: .gitignore  INSTALL.md  NEWS  TODO  meson.build
example/: get_account_name.c  meson.build  verify_password.c
include/: basics.h
lib/: varlink.c
libclient/: chauthtok.c  drop_privs.c  get_logindefs.c  varlink-client-common.c  varlink-client-common.h
libcommon/: check_caller_perms.c  chfn_checks.c  context.h  files.c  read_config.c  read_config.h  verify.c  verify.h
man/: chage.1.xml  meson.build  newgidmap.1.xml  newidmapd.8.xml  newuidmap.1.xml  pam_unix_ng.8.xml  passwd.1.xml  pwaccessd.8.xml  pwaccessd.conf.5.xml  pwupdd.8.xml
src/: chage.c  chfn.c  chsh.c  map_range.c  map_range.h  newidmapd.c  newxidmap.c  pam_debuginfo.c  pam_unix_ng-acct.c  pam_unix_ng-auth.c  pam_unix_ng-common.c  pam_unix_ng-passwd.c  pam_unix_ng-spawn.c  pam_unix_ng.h  passwd.c  pwaccessd.c  pwupdd.c  varlink-service-common.c
tests/: tst-pam_unix_ng.sh  tst-read_config.c
tests/ci/: IMPLEMENTATION.md  QUICKSTART.md  README.md  TESTING.md  TROUBLESHOOTING.md  run-tests.sh  setup-container.sh  test-chage.sh  test-chfn.sh  test-chsh.sh  test-expiry.sh  test-newidmapd.sh  test-pam.sh  test-passwd.sh  test-pwaccessd.sh  test-pwupdd.sh  test-utils.sh  test-varlink-protocol.sh
tools/: dump-privs.c  scan-caps.c
units/: newidmapd.service.in  pwaccessd.service.in  pwupdd@.service.in
